objects/Email_Message__c.object
<CustomObject>
    <fields>
        <fullName>Base_Parent_ID__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Base Parent ID</label>
        <referenceTo>Email_Message__c</referenceTo>
        <relationshipLabel>Email Messages (Base Parent ID)</relationshipLabel>
        <relationshipName>Email_Messages1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Bcc_Address__c</fullName>
        <label>Bcc Address</label>
        <length>4000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Body__c</fullName>
        <label>Body</label>
        <length>32000</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Cc_Address__c</fullName>
        <label>Cc Address</label>
        <length>4000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Email_Date__c</fullName>
        <label>Email Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>From_Address__c</fullName>
        <label>From Address</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Immediate_Parent_ID__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Immediate Parent ID</label>
        <referenceTo>Email_Message__c</referenceTo>
        <relationshipLabel>Email Messages (Immediate Parent ID)</relationshipLabel>
        <relationshipName>Email_Messages</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Letter_Template__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Letter Template</label>
        <referenceTo>Letter_Template__c</referenceTo>
        <relationshipLabel>Email Messages</relationshipLabel>
        <relationshipName>Email_Messages</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Parent_Case__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Parent Case</label>
        <referenceTo>Case</referenceTo>
        <relationshipLabel>Email Messages</relationshipLabel>
        <relationshipName>Email_Messages</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Related_To_Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Related To Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Email Messages</relationshipLabel>
        <relationshipName>Email_Messages</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Draft</fullName>
                </value>
                <value>
                    <fullName>Sent</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Subject__c</fullName>
        <label>Subject</label>
        <length>3000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>To_Address__c</fullName>
        <label>To Address</label>
        <type>TextArea</type>
    </fields>
    <label>Email Message</label>
    <nameField>
        <displayFormat>EM-{00000}</displayFormat>
        <label>Email Message Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Email Messages</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>